{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 91,
  "lineage": "11e6d14a-4d8a-27ea-286b-3e156a9bb44a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:972518559371:loadbalancer/app/goals-app-alb/38b71a228f6e2eb8",
            "arn_suffix": "app/goals-app-alb/38b71a228f6e2eb8",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "goals-app-alb-42649572.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:972518559371:loadbalancer/app/goals-app-alb/38b71a228f6e2eb8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "goals-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0622f299d9baca309",
              "sg-09bc03792a19431d3",
              "sg-0d761a9d7275e08b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035530de4e30a8423"
              },
              {
                "subnet_id": "subnet-0be89648e6f9f44cf"
              },
              {
                "subnet_id": "subnet-0da457dc1e40c398f"
              }
            ],
            "subnets": [
              "subnet-035530de4e30a8423",
              "subnet-0be89648e6f9f44cf",
              "subnet-0da457dc1e40c398f"
            ],
            "vpc_id": "vpc-013a0f3979f5d87b2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_security_group.https",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:972518559371:targetgroup/goals-app-alb-target-group/16e8ec87cd168537",
            "arn_suffix": "targetgroup/goals-app-alb-target-group/16e8ec87cd168537",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:972518559371:targetgroup/goals-app-alb-target-group/16e8ec87cd168537",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "goals-app-alb-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-013a0f3979f5d87b2"
          },
          "dependencies": [
            "aws_alb.this",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_security_group.https",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972518559371:security-group/sg-0d761a9d7275e08b4",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d761a9d7275e08b4",
            "ingress": [],
            "name": "egress-all",
            "name_prefix": "",
            "owner_id": "972518559371",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-013a0f3979f5d87b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972518559371:security-group/sg-09bc03792a19431d3",
            "description": "HTTP traffic",
            "egress": [],
            "id": "sg-09bc03792a19431d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http",
            "name_prefix": "",
            "owner_id": "972518559371",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-013a0f3979f5d87b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972518559371:security-group/sg-0622f299d9baca309",
            "description": "HTTPS traffic",
            "egress": [],
            "id": "sg-0622f299d9baca309",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https",
            "name_prefix": "",
            "owner_id": "972518559371",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-013a0f3979f5d87b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972518559371:security-group/sg-05a1c0281681e9e3f",
            "description": "Allow ingress to API",
            "egress": [],
            "id": "sg-05a1c0281681e9e3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ingress-api",
            "name_prefix": "",
            "owner_id": "972518559371",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-013a0f3979f5d87b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972518559371:internet-gateway/igw-0e3764727baa60fd6",
            "id": "igw-0e3764727baa60fd6",
            "owner_id": "972518559371",
            "tags": {
              "Name": "goals-app-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "goals-app-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-013a0f3979f5d87b2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972518559371:subnet/subnet-0f6bd1452bb610b9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6bd1452bb610b9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972518559371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goals-app-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "goals-app-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-013a0f3979f5d87b2"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972518559371:subnet/subnet-0a482c8f820cd0a95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a482c8f820cd0a95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972518559371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goals-app-vpc-private-eu-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "goals-app-vpc-private-eu-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-013a0f3979f5d87b2"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972518559371:subnet/subnet-09868c969c8aceb1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09868c969c8aceb1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972518559371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goals-app-vpc-private-eu-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "goals-app-vpc-private-eu-west-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-013a0f3979f5d87b2"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972518559371:subnet/subnet-035530de4e30a8423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035530de4e30a8423",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972518559371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goals-app-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "goals-app-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-013a0f3979f5d87b2"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972518559371:subnet/subnet-0be89648e6f9f44cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be89648e6f9f44cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972518559371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goals-app-vpc-public-eu-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "goals-app-vpc-public-eu-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-013a0f3979f5d87b2"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972518559371:subnet/subnet-0da457dc1e40c398f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da457dc1e40c398f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972518559371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "goals-app-vpc-public-eu-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "goals-app-vpc-public-eu-west-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-013a0f3979f5d87b2"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:972518559371:vpc/vpc-013a0f3979f5d87b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e685836a79a7978b",
            "default_route_table_id": "rtb-09bc21dbbd1a33e9b",
            "default_security_group_id": "sg-0e23cc0e6f1ea7b94",
            "dhcp_options_id": "dopt-1f95ac77",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-013a0f3979f5d87b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09bc21dbbd1a33e9b",
            "owner_id": "972518559371",
            "tags": {
              "Name": "goals-app-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "goals-app-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}